--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	},
 	"homepage": "https://github.com/MichaelDuo/saga-resource#readme",
 	"devDependencies": {
+		"@types/lodash": "^4.14.133",
+		"@types/redux": "^3.6.0",
 		"@typescript-eslint/eslint-plugin": "^1.9.0",
 		"@typescript-eslint/parser": "^1.9.0",
 		"eslint": "^5.16.0",
@@ -26,5 +28,11 @@
 		"eslint-plugin-prettier": "^3.1.0",
 		"prettier": "^1.17.1",
 		"typescript": "^3.3.4000"
+	},
+	"dependencies": {
+		"axios": "^0.19.0",
+		"lodash": "^4.17.11",
+		"path-to-regexp": "^3.0.0",
+		"redux-saga": "^1.0.2"
 	}
 }
