--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "es5",
-		"allowSyntheticDefaultImports": true,
-		"lib": ["es2017"],
+		"esModuleInterop": true,
+		"lib": ["dom", "es2017"],
 		"module": "commonjs",
 		"declaration": true,
 		"outDir": "./dist",
