--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "tsc",
 		"lint": "eslint \"./**/*@(.js|.jsx|.ts|.tsx)\"",
-		"test": "npm run lint"
+		"test": "jest --config jestconfig.json"
 	},
 	"repository": {
 		"type": "git",
@@ -19,6 +19,7 @@
 	},
 	"homepage": "https://github.com/MichaelDuo/saga-resource#readme",
 	"devDependencies": {
+		"@types/jest": "^24.0.13",
 		"@types/lodash": "^4.14.133",
 		"@types/redux": "^3.6.0",
 		"@typescript-eslint/eslint-plugin": "^1.9.0",
@@ -26,7 +27,9 @@
 		"eslint": "^5.16.0",
 		"eslint-config-prettier": "^4.3.0",
 		"eslint-plugin-prettier": "^3.1.0",
+		"jest": "^24.8.0",
 		"prettier": "^1.17.1",
+		"ts-jest": "^24.0.2",
 		"typescript": "^3.3.4000"
 	},
 	"dependencies": {
