--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
     - npm install && npm install -g codecov
 script:
     - npm run lint
-    - npm run test -- --coversage && codecov
+    - npm run test -- --coverage && codecov
     - npm run build
