--- a/examples/react-typescript-example/package.json
+++ b/examples/react-typescript-example/package.json
@@ -13,7 +13,8 @@
 		"react-scripts": "3.0.1",
 		"redux": "^4.0.1",
 		"redux-saga": "^1.0.2",
-		"typescript": "3.3.4000"
+		"typescript": "3.3.4000",
+		"saga-resource": "../../"
 	},
 	"scripts": {
 		"start": "react-scripts start",
