--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "saga-resource",
-	"version": "0.3.82",
+	"version": "0.3.83",
 	"description": "saga-resource",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -39,12 +39,17 @@
 		"nodemon": "^1.19.1",
 		"prettier": "^1.17.1",
 		"ts-jest": "^24.0.2",
-		"typescript": "^3.3.4000"
-	},
-	"dependencies": {
+		"typescript": "^3.3.4000",
 		"axios": "^0.21.1",
-		"lodash": "^4.17.15",
-		"path-to-regexp": "^3.0.0",
-		"redux-saga": "^1.0.2"
-	}
+		"lodash": "^4.17.20",
+		"path-to-regexp": "^6.2.0",
+		"redux-saga": "^1.1.3"
+	},
+	"peerDependencies": {
+		"axios": "^0.21.1",
+		"lodash": "^4.17.20",
+		"path-to-regexp": "^6.2.0",
+		"redux-saga": "^1.1.3"
+	},
+	"dependencies": {}
 }
