--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
 		"typescript": "^3.3.4000",
 		"axios": "^0.21.1",
 		"lodash": "^4.17.20",
-		"path-to-regexp": "^6.2.0",
 		"redux-saga": "^1.1.3"
 	},
 	"peerDependencies": {
 		"axios": "^0.21.1",
 		"lodash": "^4.17.20",
-		"path-to-regexp": "^6.2.0",
 		"redux-saga": "^1.1.3"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"path-to-regexp": "^3.0.0"
+	}
 }
